--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,7 @@
         "name": "Mocha All",
         "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
         "args": [
+          "NODE_ENV=test NODE_NO_WARNINGS=1",
           "--timeout",
           "999999",
           "--colors",
@@ -35,6 +36,7 @@
         "name": "Mocha Current File",
         "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
         "args": [
+          "NODE_ENV=test NODE_NO_WARNINGS=1",
           "--timeout",
           "999999",
           "--colors",
